@@ -1,3 +1,6 @@
+9 October 2023
+Minor fix of indentation algorithm.
+
 27 September 2023
 numbercheck: Accept hexadecimal floating point notation: chars a-f A-F.
 
